--- a/notebooks/Insert Calculations.ipynb
+++ b/notebooks/Insert Calculations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1671fa59-c236-4401-8548-afaee3e85fcd",
    "metadata": {},
    "outputs": [],
@@ -10,14 +10,17 @@
     "from __future__ import annotations\n",
     "import os\n",
     "from tqdm import tqdm\n",
+    "import warnings\n",
     "\n",
     "from monty.serialization import loadfn\n",
-    "from pymongo import MongoClient"
+    "from pymongo import MongoClient\n",
+    "\n",
+    "warnings.simplefilter('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "870765b8-719c-4405-b489-ba3f2733b10f",
    "metadata": {},
    "outputs": [],
@@ -28,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5e60c4e6-c868-4dc1-ac1e-ed25ceca96ba",
    "metadata": {},
    "outputs": [],
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e7eb2367-d29b-4de2-91bb-489906689761",
    "metadata": {},
    "outputs": [
@@ -171,13 +174,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|▎                            | 5550/434712 [00:00<00:48, 8935.55it/s]/Users/shyue/repos/pymatgen/src/pymatgen/core/periodic_table.py:289: UserWarning: No Pauling electronegativity for Ar. Setting to NaN. This has no physical meaning, and is mainly done to avoid errors caused by the code expecting a float.\n",
-      "  warnings.warn(\n",
-      "  3%|▉                           | 13777/434712 [00:01<00:45, 9191.95it/s]/Users/shyue/repos/pymatgen/src/pymatgen/core/periodic_table.py:289: UserWarning: No Pauling electronegativity for He. Setting to NaN. This has no physical meaning, and is mainly done to avoid errors caused by the code expecting a float.\n",
-      "  warnings.warn(\n",
-      " 69%|██████████████████▌        | 298570/434712 [01:09<00:48, 2824.62it/s]/Users/shyue/repos/pymatgen/src/pymatgen/core/periodic_table.py:289: UserWarning: No Pauling electronegativity for Ne. Setting to NaN. This has no physical meaning, and is mainly done to avoid errors caused by the code expecting a float.\n",
-      "  warnings.warn(\n",
-      "100%|███████████████████████████| 434712/434712 [02:55<00:00, 2483.15it/s]\n"
+      " 62%|█████████████████████████████████████████████████▎                             | 271161/434712 [01:07<01:16, 2149.16it/s]"
      ]
     }
    ],
@@ -187,21 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d167bd6c-197a-4e95-9267-c7b10b0ad6ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████| 387897/387897 [02:06<00:00, 3067.88it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "make_db(\"r2SCAN\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89b44d7f-b5e1-4f0f-bff8-f6926a6240c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -220,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
