Fix notebook lint.

--- a/notebooks/Insert Calculations.ipynb
+++ b/notebooks/Insert Calculations.ipynb
@@ -41,7 +41,9 @@
     "    \"\"\"\n",
     "    Creates and populates a MongoDB with materials structure data for a specified functional.\n",
     "\n",
-    "    The method reads a JSON file containing training data for the given `functional`, processes the to extract and augment relevant atomic and chemical information, and inserts the processed data into a corresponding MongoDB collection. Additionally, indexes are created on key fields to improve query performance.\n",
+    "    The method reads a JSON file containing training data for the given `functional`, processes the to extract and\n",
+    "    augment relevant atomic and chemical information, and inserts the processed data into a corresponding MongoDB\n",
+    "    collection. Additionally, indexes are created on key fields to improve query performance.\n",
     "\n",
     "    Args:\n",
     "        functional (str): The name of the functional. This is used to locate\n",
