--- a/notebooks/Generate Stats Files.ipynb
+++ b/notebooks/Generate Stats Files.ipynb
@@ -17,6 +17,10 @@
    "source": [
     "from __future__ import annotations\n",
     "\n",
+    "import collections\n",
+    "import itertools\n",
+    "import json\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "from matpes.db import MatPESDB"
@@ -32,134 +36,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['elements', 'chemsys', 'cohesive_energy_per_atom', 'nsites',\n",
-      "       'nelements', 'abs_forces'],\n",
-      "      dtype='object')\n",
-      "Index(['elements', 'chemsys', 'cohesive_energy_per_atom', 'nsites',\n",
-      "       'nelements', 'abs_forces'],\n",
-      "      dtype='object')\n"
+      "{'nstructures': 434712, 'element_counts': {'Ti': 19582, 'Y': 11913, 'N': 46032, 'Zn': 15747, 'Sn': 16844, 'U': 9978, 'Ni': 29953, 'Zr': 12234, 'Ga': 14424, 'Gd': 4073, 'O': 117733, 'P': 20139, 'C': 25549, 'Th': 6839, 'Tc': 7282, 'Sb': 17902, 'Cd': 11301, 'La': 12460, 'Te': 13663, 'Cu': 24215, 'S': 21187, 'Ag': 11239, 'F': 18416, 'B': 17186, 'As': 11601, 'Ge': 15543, 'Li': 29705, 'Tl': 9729, 'Os': 10237, 'Si': 25229, 'Mo': 13265, 'V': 18753, 'Pd': 12550, 'Hg': 9439, 'Pu': 9842, 'W': 14791, 'K': 14456, 'Al': 20315, 'Nb': 13854, 'Rh': 12674, 'Ce': 9680, 'Ru': 12588, 'Sc': 9416, 'Co': 27048, 'Be': 7618, 'Au': 12663, 'Mg': 33692, 'Eu': 6954, 'Cl': 11168, 'Fe': 36116, 'Cr': 18516, 'Mn': 30568, 'Br': 7690, 'H': 15441, 'Re': 9901, 'Se': 14238, 'Sr': 16097, 'In': 12260, 'Pt': 12678, 'Cs': 8554, 'Ir': 9692, 'Hf': 10140, 'I': 7016, 'Bi': 13712, 'Pa': 4577, 'Np': 5453, 'Ac': 2708, 'Na': 15718, 'Lu': 3398, 'Kr': 26, 'Ta': 12552, 'Rb': 9213, 'Ca': 15258, 'Pb': 9609, 'He': 88, 'Tm': 2961, 'Yb': 7452, 'Sm': 5420, 'Ho': 3546, 'Pm': 1776, 'Ba': 15554, 'Pr': 5354, 'Tb': 3745, 'Er': 3189, 'Nd': 5922, 'Dy': 3409, 'Xe': 204, 'Ne': 1, 'Ar': 3}, 'cohesive_energy_per_atom': {'counts': [1, 0, 6, 22, 99, 380, 706, 1314, 2355, 3667, 5664, 7998, 10499, 13787, 16543, 19561, 22852, 25220, 28952, 28719, 29383, 27531, 26217, 24750, 24139, 21872, 19748, 16414, 13750, 11239, 9264, 7684, 5599, 3839, 2456, 1417, 639, 307, 42, 28, 26, 11, 7, 1, 3, 0, 0, 0, 0, 1], 'bins': [-9.441932215, -9.193073244699999, -8.9442142744, -8.6953553041, -8.446496333799999, -8.1976373635, -7.9487783932, -7.6999194229, -7.4510604526, -7.2022014823, -6.953342512, -6.7044835417, -6.4556245714, -6.2067656011, -5.9579066308, -5.7090476605, -5.4601886902, -5.2113297199, -4.9624707496, -4.7136117793, -4.464752809, -4.2158938387, -3.9670348684, -3.7181758981, -3.4693169277999996, -3.2204579575, -2.9715989872, -2.7227400169000004, -2.4738810466, -2.2250220763, -1.9761631060000004, -1.7273041356999999, -1.4784451654000001, -1.2295861950999996, -0.9807272248000007, -0.7318682545000001, -0.48300928419999956, -0.23415031390000074, 0.014708656399999853, 0.26356762670000045, 0.5124265969999993, 0.7612855672999999, 1.0101445376000004, 1.2590035078999993, 1.5078624781999999, 1.7567214485000004, 2.0055804187999993, 2.2544393891, 2.5032983594000005, 2.7521573296999993, 3.0010163000000003]}, 'nsites': {'counts': [252234, 75140, 31734, 29365, 14086, 14177, 8149, 7800, 872, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 49, 81, 433, 21, 131, 58, 55, 70, 25, 61, 46, 0, 18, 15, 44, 0, 0, 0, 0, 0, 0, 0, 6, 4, 13, 0, 6, 0, 2, 15], 'bins': [1.0, 5.84, 10.68, 15.52, 20.36, 25.2, 30.04, 34.879999999999995, 39.72, 44.56, 49.4, 54.239999999999995, 59.08, 63.92, 68.75999999999999, 73.6, 78.44, 83.28, 88.12, 92.96, 97.8, 102.64, 107.47999999999999, 112.32, 117.16, 122.0, 126.84, 131.68, 136.51999999999998, 141.35999999999999, 146.2, 151.04, 155.88, 160.72, 165.56, 170.4, 175.24, 180.07999999999998, 184.92, 189.76, 194.6, 199.44, 204.28, 209.12, 213.95999999999998, 218.79999999999998, 223.64, 228.48, 233.32, 238.16, 243.0]}, 'abs_forces': {'counts': [3874787, 3293, 1538, 668, 508, 250, 137, 110, 63, 28, 32, 24, 11, 8, 1, 5, 2, 1, 3, 0, 0, 0, 1, 0, 1, 0, 1, 10, 6, 0, 0, 0, 0, 9, 16, 14, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 6], 'bins': [0.0, 15.777319937691583, 31.554639875383167, 47.33195981307475, 63.10927975076633, 78.88659968845792, 94.6639196261495, 110.44123956384108, 126.21855950153267, 141.99587943922424, 157.77319937691584, 173.5505193146074, 189.327839252299, 205.1051591899906, 220.88247912768216, 236.65979906537376, 252.43711900306533, 268.2144389407569, 283.9917588784485, 299.7690788161401, 315.5463987538317, 331.32371869152325, 347.1010386292148, 362.8783585669064, 378.655678504598, 394.4329984422896, 410.2103183799812, 425.98763831767275, 441.7649582553643, 457.5422781930559, 473.3195981307475, 489.0969180684391, 504.87423800613067, 520.6515579438222, 536.4288778815138, 552.2061978192054, 567.983517756897, 583.7608376945885, 599.5381576322802, 615.3154775699718, 631.0927975076634, 646.8701174453549, 662.6474373830465, 678.4247573207381, 694.2020772584297, 709.9793971961212, 725.7567171338128, 741.5340370715044, 757.311357009196, 773.0886769468876, 788.8659968845792]}, 'nelements': {'counts': [5274, 133557, 231743, 51303, 11424, 1371, 39, 1], 'bins': [0.5, 1.5, 2.5, 3.5, 4.5, 5.5, 6.5, 7.5, 8.5]}}\n",
+      "{'nstructures': 387897, 'element_counts': {'N': 43472, 'Zn': 14282, 'Ti': 17785, 'Y': 10925, 'Sn': 15426, 'U': 9141, 'Ni': 27300, 'Zr': 11476, 'Ga': 13285, 'Gd': 3770, 'O': 98013, 'P': 16695, 'C': 23490, 'Th': 6507, 'Tc': 7011, 'Sb': 16225, 'Cd': 10482, 'La': 11435, 'Te': 12500, 'Ag': 10345, 'F': 15572, 'Cu': 21841, 'S': 18755, 'B': 15527, 'As': 10442, 'Ge': 14071, 'Li': 24068, 'Tl': 8878, 'Os': 9601, 'Si': 22437, 'Mo': 12426, 'V': 16601, 'Pd': 11702, 'Hg': 8659, 'Pu': 7954, 'W': 13852, 'Al': 18405, 'Nb': 12676, 'Rh': 11803, 'Ru': 11516, 'Ce': 8434, 'Co': 23345, 'Au': 11672, 'Mg': 30197, 'Be': 7307, 'Eu': 6277, 'Cr': 16465, 'Mn': 26080, 'Cl': 9976, 'Fe': 31496, 'Br': 6881, 'H': 13649, 'Re': 9188, 'Cs': 7651, 'Lu': 3144, 'Se': 12954, 'Sr': 14560, 'In': 11098, 'Pt': 11913, 'Sc': 8951, 'Ir': 8970, 'Hf': 9560, 'I': 6155, 'K': 12923, 'Bi': 12282, 'Pa': 4125, 'Np': 4785, 'Ac': 2526, 'Na': 14021, 'Rb': 8311, 'Ta': 11710, 'Ca': 13825, 'Pb': 8611, 'He': 85, 'Kr': 26, 'Yb': 5148, 'Ba': 10183, 'Ho': 2141, 'Pm': 997, 'Dy': 2004, 'Sm': 3394, 'Pr': 3389, 'Er': 2104, 'Tm': 2139, 'Tb': 2326, 'Nd': 3766, 'Xe': 173, 'Ar': 3, 'Ne': 1}, 'cohesive_energy_per_atom': {'counts': [1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 31, 199, 737, 1744, 3737, 6681, 11137, 16321, 21740, 26673, 31886, 36275, 38308, 38434, 35456, 31603, 26364, 20390, 15090, 10996, 6531, 4178, 2262, 835, 185, 38, 28, 16, 10, 2, 0, 0, 0, 0, 1], 'bins': [-13.7408266, -13.3929893422, -13.0451520844, -12.6973148266, -12.349477568800001, -12.001640311000001, -11.6538030532, -11.3059657954, -10.9581285376, -10.6102912798, -10.262454022, -9.914616764200002, -9.5667795064, -9.218942248600001, -8.871104990800001, -8.523267733, -8.1754304752, -7.8275932174000005, -7.4797559596, -7.131918701800001, -6.784081444000001, -6.436244186200001, -6.088406928400001, -5.740569670600001, -5.392732412800001, -5.044895155000001, -4.6970578972000006, -4.3492206394, -4.001383381600002, -3.6535461238000018, -3.3057088660000016, -2.9578716082000014, -2.610034350400001, -2.262197092600001, -1.9143598348000008, -1.5665225770000006, -1.2186853192000004, -0.870848061400002, -0.5230108036000019, -0.17517354580000166, 0.17266371199999853, 0.5205009697999987, 0.8683382275999989, 1.216175485399999, 1.5640127431999975, 1.9118500009999977, 2.259687258799998, 2.6075245166, 2.9553617743999983, 3.3031990321999967, 3.6510362900000004]}, 'nsites': {'counts': [234358, 70479, 30708, 28481, 10376, 4072, 2654, 5102, 719, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 42, 72, 286, 79, 113, 26, 59, 18, 48, 68, 9, 37, 1, 20, 43, 0, 0, 0, 0, 0, 0, 0, 0, 4, 14, 0, 3, 0, 0, 4], 'bins': [1.0, 5.78, 10.56, 15.34, 20.12, 24.900000000000002, 29.68, 34.46, 39.24, 44.02, 48.800000000000004, 53.580000000000005, 58.36, 63.14, 67.92, 72.7, 77.48, 82.26, 87.04, 91.82000000000001, 96.60000000000001, 101.38000000000001, 106.16000000000001, 110.94000000000001, 115.72, 120.5, 125.28, 130.06, 134.84, 139.62, 144.4, 149.18, 153.96, 158.74, 163.52, 168.3, 173.08, 177.86, 182.64000000000001, 187.42000000000002, 192.20000000000002, 196.98000000000002, 201.76000000000002, 206.54000000000002, 211.32000000000002, 216.10000000000002, 220.88000000000002, 225.66000000000003, 230.44, 235.22, 240.0]}, 'abs_forces': {'counts': [3055137, 2341, 1023, 420, 331, 132, 96, 71, 21, 12, 23, 24, 7, 3, 2, 1, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 6, 12, 4, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 4, 2], 'bins': [0.0, 16.279898247353877, 32.559796494707754, 48.83969474206163, 65.11959298941551, 81.39949123676939, 97.67938948412326, 113.95928773147713, 130.23918597883102, 146.5190842261849, 162.79898247353879, 179.07888072089264, 195.35877896824653, 211.6386772156004, 227.91857546295427, 244.19847371030815, 260.47837195766203, 276.7582702050159, 293.0381684523698, 309.31806669972366, 325.59796494707757, 341.8778631944314, 358.1577614417853, 374.4376596891392, 390.71755793649305, 406.9974561838469, 423.2773544312008, 439.5572526785547, 455.83715092590853, 472.11704917326244, 488.3969474206163, 504.6768456679702, 520.9567439153241, 537.236642162678, 553.5165404100318, 569.7964386573857, 586.0763369047396, 602.3562351520934, 618.6361333994473, 634.9160316468012, 651.1959298941551, 667.4758281415089, 683.7557263888629, 700.0356246362168, 716.3155228835706, 732.5954211309245, 748.8753193782784, 765.1552176256322, 781.4351158729861, 797.71501412034, 813.9949123676939]}, 'nelements': {'counts': [5097, 123446, 207104, 42284, 8989, 950, 26, 1], 'bins': [0.5, 1.5, 2.5, 3.5, 4.5, 5.5, 6.5, 7.5, 8.5]}}\n"
      ]
     }
    ],
    "source": [
     "matpes = MatPESDB()\n",
     "\n",
-    "for f in [\"pbe\", \"r2scan\"]:\n",
-    "    df = matpes.get_df(f)\n",
+    "for fun in [\"pbe\", \"r2scan\"]:\n",
+    "    df = matpes.get_df(fun)\n",
     "    df[\"abs_forces\"] = df[\"forces\"].map(lambda a: np.linalg.norm(a, axis=1))\n",
     "    df = df.drop([\"matpes_id\", \"bandgap\", \"energy\", \"forces\", \"formation_energy_per_atom\", \"formula_pretty\"], axis=1)\n",
-    "    df.to_pickle(f\"../pages/{f}_stats.pkl\")\n",
-    "    print(df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>elements</th>\n",
-       "      <th>chemsys</th>\n",
-       "      <th>cohesive_energy_per_atom</th>\n",
-       "      <th>nsites</th>\n",
-       "      <th>nelements</th>\n",
-       "      <th>abs_forces</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[N, Zn]</td>\n",
-       "      <td>N-Zn</td>\n",
-       "      <td>-2.481338</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[0.6342174031154766, 0.6342174031154766]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[Ti, Y]</td>\n",
-       "      <td>Ti-Y</td>\n",
-       "      <td>-4.083879</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[0.6752115490473339, 0.6752115490473339]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[N, Zn]</td>\n",
-       "      <td>N-Zn</td>\n",
-       "      <td>-1.544997</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[0.7046487634925044, 0.7046487634925044]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[N, Zn]</td>\n",
-       "      <td>N-Zn</td>\n",
-       "      <td>-2.220572</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[2.3106321813065724, 2.3106321813065724]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[N, Zn]</td>\n",
-       "      <td>N-Zn</td>\n",
-       "      <td>-2.130760</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[1.82873774801284, 1.82873774801284]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  elements chemsys  cohesive_energy_per_atom  nsites  nelements  \\\n",
-       "0  [N, Zn]    N-Zn                 -2.481338       2          2   \n",
-       "1  [Ti, Y]    Ti-Y                 -4.083879       2          2   \n",
-       "2  [N, Zn]    N-Zn                 -1.544997       2          2   \n",
-       "3  [N, Zn]    N-Zn                 -2.220572       2          2   \n",
-       "4  [N, Zn]    N-Zn                 -2.130760       2          2   \n",
-       "\n",
-       "                                 abs_forces  \n",
-       "0  [0.6342174031154766, 0.6342174031154766]  \n",
-       "1  [0.6752115490473339, 0.6752115490473339]  \n",
-       "2  [0.7046487634925044, 0.7046487634925044]  \n",
-       "3  [2.3106321813065724, 2.3106321813065724]  \n",
-       "4      [1.82873774801284, 1.82873774801284]  "
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
+    "    stats = {\"nstructures\": len(df)}\n",
+    "    stats[\"element_counts\"] = dict(collections.Counter(itertools.chain.from_iterable(df[\"elements\"])))\n",
+    "    for c in [\"cohesive_energy_per_atom\", \"nsites\"]:\n",
+    "        counts, bins = np.histogram(df[c], bins=50)\n",
+    "        stats[c] = {\"counts\": counts.tolist(), \"bins\": bins.tolist()}\n",
+    "    counts, bins = np.histogram(list(itertools.chain(*df[\"abs_forces\"])), bins=50)\n",
+    "    stats[\"abs_forces\"] = {\"counts\": counts.tolist(), \"bins\": bins.tolist()}\n",
+    "    counts, bins = np.histogram(df[\"nelements\"], bins=np.arange(0.5, 9.5, 1))\n",
+    "    stats[\"nelements\"] = {\"counts\": counts.tolist(), \"bins\": bins.tolist()}\n",
+    "    with open(f\"../pages/{fun}_stats.json\", \"w\") as f:\n",
+    "        json.dump(stats, f)\n",
+    "    print(stats)\n",
+    "    # df.to_pickle(f\"../pages/{f}_stats.pkl\")\n",
+    "    # print(df.columns)"
    ]
   }
  ],
