Update MatPES training notebook.

--- a/notebooks/Training a MatPES model.ipynb
+++ b/notebooks/Training a MatPES model.ipynb
@@ -5,7 +5,9 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "This notebook is used to demonstrate the training of TensorNet on MatPES-PBE dataset"
+    "# Introduction \n",
+    "\n",
+    "This notebook demonstrates the fitting of a TensorNet UMLIP using the MatPES v2025.1 PBE dataset. Fitting of other architectures in MatGL with either the PBE or r2SCAN datasets is similar."
    ]
   },
   {
@@ -35,8 +37,12 @@
     "from matgl.graph.data import MGLDataLoader, MGLDataset, collate_fn_pes\n",
     "from matgl.models import TensorNet\n",
     "from matgl.utils.training import PotentialLightningModule, xavier_init\n",
+    "from monty.io import zopen\n",
     "from pymatgen.core import Structure\n",
-    "from torch.optim.lr_scheduler import CosineAnnealingLR"
+    "from torch.optim.lr_scheduler import CosineAnnealingLR\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from matpes.data import get_data"
    ]
   },
   {
@@ -44,120 +50,200 @@
    "execution_count": null,
    "id": "2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://s3.us-east-1.amazonaws.com/materialsproject-contribs/MatPES_2025_1/MatPES-PBE-2025.1.json.gz...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 431M/431M [01:39<00:00, 4.33MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://s3.us-east-1.amazonaws.com/materialsproject-contribs/MatPES_2025_1/MatPES-PBE-atoms.json.gz...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 8.39k/8.39k [00:00<00:00, 871kB/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# define the isolated atom energies for PBE\n",
-    "isolated_energies_pbe = {\n",
-    "    \"Ac\": -0.24210133,\n",
-    "    \"Ag\": -0.19840574,\n",
-    "    \"Al\": -0.21672837,\n",
-    "    \"Ar\": -0.0235315,\n",
-    "    \"As\": -1.70136472,\n",
-    "    \"Au\": -0.18479218,\n",
-    "    \"B\": -0.2911712,\n",
-    "    \"Ba\": -1.35978407,\n",
-    "    \"Be\": -0.04262353,\n",
-    "    \"Bi\": -1.32462383,\n",
-    "    \"Br\": -0.22687512,\n",
-    "    \"C\": -1.26281801,\n",
-    "    \"Ca\": -0.02596217,\n",
-    "    \"Cd\": -0.01374787,\n",
-    "    \"Ce\": -1.43642821,\n",
-    "    \"Cl\": -0.25828681,\n",
-    "    \"Co\": -1.66614587,\n",
-    "    \"Cr\": -5.44620624,\n",
-    "    \"Cs\": -0.13452777,\n",
-    "    \"Cu\": -0.23745594,\n",
-    "    \"Dy\": -5.51640166,\n",
-    "    \"Er\": -3.03880565,\n",
-    "    \"Eu\": -9.48606277,\n",
-    "    \"F\": -0.43794547,\n",
-    "    \"Fe\": -3.30583367,\n",
-    "    \"Ga\": -0.19854295,\n",
-    "    \"Gd\": -8.11540027,\n",
-    "    \"Ge\": -0.77924665,\n",
-    "    \"H\": -1.11723232,\n",
-    "    \"He\": -0.00045595,\n",
-    "    \"Hf\": -3.49292389,\n",
-    "    \"Hg\": -0.0105212,\n",
-    "    \"Ho\": -4.30111439,\n",
-    "    \"I\": -0.18858477,\n",
-    "    \"In\": -0.19672488,\n",
-    "    \"Ir\": -1.42793567,\n",
-    "    \"K\": -0.17827125,\n",
-    "    \"Kr\": -0.02265396,\n",
-    "    \"La\": -0.62794477,\n",
-    "    \"Li\": -0.29734917,\n",
-    "    \"Lu\": -0.25255978,\n",
-    "    \"Mg\": -0.00994627,\n",
-    "    \"Mn\": -5.14592659,\n",
-    "    \"Mo\": -4.60213279,\n",
-    "    \"N\": -3.12555634,\n",
-    "    \"Na\": -0.22858276,\n",
-    "    \"Nb\": -2.53481909,\n",
-    "    \"Nd\": -3.6389801,\n",
-    "    \"Ne\": -0.01216023,\n",
-    "    \"Ni\": -0.28412403,\n",
-    "    \"Np\": -7.30273499,\n",
-    "    \"O\": -1.54690765,\n",
-    "    \"Os\": -2.88280809,\n",
-    "    \"P\": -1.88719667,\n",
-    "    \"Pa\": -2.03239022,\n",
-    "    \"Pb\": -0.63069886,\n",
-    "    \"Pd\": -1.47521138,\n",
-    "    \"Pm\": -5.08859903,\n",
-    "    \"Pr\": -2.12706895,\n",
-    "    \"Pt\": -0.50244445,\n",
-    "    \"Pu\": -10.39244586,\n",
-    "    \"Rb\": -0.16194042,\n",
-    "    \"Re\": -4.63436797,\n",
-    "    \"Rh\": -1.44016062,\n",
-    "    \"Ru\": -1.68884293,\n",
-    "    \"S\": -0.89091719,\n",
-    "    \"Sb\": -1.4302063,\n",
-    "    \"Sc\": -2.12966897,\n",
-    "    \"Se\": -0.78345919,\n",
-    "    \"Si\": -0.82583191,\n",
-    "    \"Sm\": -6.9970228,\n",
-    "    \"Sn\": -0.67963499,\n",
-    "    \"Sr\": -0.02823145,\n",
-    "    \"Ta\": -3.5659314,\n",
-    "    \"Tb\": -6.45686224,\n",
-    "    \"Tc\": -3.40289704,\n",
-    "    \"Te\": -0.6573123,\n",
-    "    \"Th\": -1.04419147,\n",
-    "    \"Ti\": -2.40532262,\n",
-    "    \"Tl\": -0.17939998,\n",
-    "    \"Tm\": -2.10513872,\n",
-    "    \"U\": -4.6443113,\n",
-    "    \"V\": -3.61232779,\n",
-    "    \"W\": -4.57101127,\n",
-    "    \"Xe\": -0.01020284,\n",
-    "    \"Y\": -2.25679622,\n",
-    "    \"Yb\": -1.84040717,\n",
-    "    \"Zn\": -0.01098351,\n",
-    "    \"Zr\": -2.23742918,\n",
-    "}\n",
-    "# read the MatPES database using json\n",
-    "with open(\"MatPES-PBE-2025.1.json\") as f:\n",
-    "    data = json.load(f)\n",
-    "# initialize the lists for storing structures with energies, forces, and optional stresses\n",
-    "structures = []\n",
-    "energies = []\n",
-    "forces = []\n",
-    "stresses = []\n",
-    "for i in range(len(data)):\n",
-    "    structures.append(Structure.from_dict(data[i][\"structure\"]))\n",
-    "    energies.append(data[i][\"energy\"])\n",
-    "    forces.append(data[i][\"forces\"])\n",
-    "    stresses.append(voigt_6_to_full_3x3_stress(np.array(data[i][\"stress\"])) * -0.1)\n",
-    "stresses = [stress.tolist() for stress in stresses]"
+    "data = get_data(\"PBE\", download_atoms=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3",
+   "metadata": {},
+   "source": [
+    "We need to load the atomic energies as the zero reference."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Zn': -0.01098351,\n",
+       " 'Y': -2.25679622,\n",
+       " 'Tl': -0.17939998,\n",
+       " 'Ti': -2.40532262,\n",
+       " 'Sr': -0.02823145,\n",
+       " 'Ta': -3.5659314,\n",
+       " 'Te': -0.6573123,\n",
+       " 'V': -3.61232779,\n",
+       " 'W': -4.57101127,\n",
+       " 'Si': -0.82583191,\n",
+       " 'Sn': -0.67963499,\n",
+       " 'Se': -0.78345919,\n",
+       " 'Sb': -1.4302063,\n",
+       " 'Sc': -2.12966897,\n",
+       " 'Zr': -2.23742918,\n",
+       " 'Rh': -1.44016062,\n",
+       " 'Re': -4.63436797,\n",
+       " 'O2': -1.54690765,\n",
+       " 'Tc': -3.40289704,\n",
+       " 'Os': -2.88280809,\n",
+       " 'Rb': -0.16194042,\n",
+       " 'P': -1.88719667,\n",
+       " 'S': -0.89091719,\n",
+       " 'Th': -1.04419147,\n",
+       " 'Ni': -0.28412403,\n",
+       " 'Pb': -0.63069886,\n",
+       " 'Pd': -1.47521138,\n",
+       " 'Pt': -0.50244445,\n",
+       " 'Ru': -1.68884293,\n",
+       " 'Pa': -2.03239022,\n",
+       " 'Pu': -10.39244586,\n",
+       " 'Ne': -0.01216023,\n",
+       " 'Na': -0.22858276,\n",
+       " 'Nb': -2.53481909,\n",
+       " 'N2': -3.12555634,\n",
+       " 'Mn': -5.14592659,\n",
+       " 'Mg': -0.00994627,\n",
+       " 'U': -4.6443113,\n",
+       " 'Li': -0.29734917,\n",
+       " 'Np': -7.30273499,\n",
+       " 'Lu': -0.25255978,\n",
+       " 'Mo': -4.60213279,\n",
+       " 'Kr': -0.02265396,\n",
+       " 'In': -0.19672488,\n",
+       " 'I': -0.18858477,\n",
+       " 'He': -0.00045595,\n",
+       " 'Hf': -3.49292389,\n",
+       " 'Hg': -0.0105212,\n",
+       " 'K': -0.17827125,\n",
+       " 'Ir': -1.42793567,\n",
+       " 'Ge': -0.77924665,\n",
+       " 'F2': -0.43794547,\n",
+       " 'Ga': -0.19854295,\n",
+       " 'Fe': -3.30583367,\n",
+       " 'Cs': -0.13452777,\n",
+       " 'Cu': -0.23745594,\n",
+       " 'Cl2': -0.25828681,\n",
+       " 'Br': -0.22687512,\n",
+       " 'Cd': -0.01374787,\n",
+       " 'Be': -0.04262353,\n",
+       " 'C': -1.26281801,\n",
+       " 'H2': -1.11723232,\n",
+       " 'Ca': -0.02596217,\n",
+       " 'Al': -0.21672837,\n",
+       " 'Bi': -1.32462383,\n",
+       " 'As': -1.70136472,\n",
+       " 'B': -0.2911712,\n",
+       " 'Au': -0.18479218,\n",
+       " 'Ar': -0.0235315,\n",
+       " 'Ag': -0.19840574,\n",
+       " 'Ac': -0.24210133,\n",
+       " 'Co': -1.66614587,\n",
+       " 'Cr': -5.44620624,\n",
+       " 'Eu': -9.48606277,\n",
+       " 'Ce': -1.43642821,\n",
+       " 'Gd': -8.11540027,\n",
+       " 'La': -0.62794477,\n",
+       " 'Xe': -0.01020284,\n",
+       " 'Yb': -1.84040717,\n",
+       " 'Sm': -6.9970228,\n",
+       " 'Pm': -5.08859903,\n",
+       " 'Ho': -4.30111439,\n",
+       " 'Ba': -1.35978407,\n",
+       " 'Nd': -3.6389801,\n",
+       " 'Dy': -5.51640166,\n",
+       " 'Er': -3.03880565,\n",
+       " 'Tm': -2.10513872,\n",
+       " 'Tb': -6.45686224,\n",
+       " 'Pr': -2.12706895}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with zopen(\"MatPES-PBE-atoms.json.gz\", \"rt\") as f:\n",
+    "    isolated_energies_pbe = json.load(f)\n",
+    "isolated_energies_pbe = {d[\"formula_pretty\"]: d[\"energy\"] for d in isolated_energies_pbe}\n",
+    "isolated_energies_pbe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 434712/434712 [00:57<00:00, 7595.45it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize the lists for storing structures with energies, forces, and optional stresses\n",
+    "structures = []\n",
+    "energies = []\n",
+    "forces = []\n",
+    "stresses = []\n",
+    "for d in tqdm(data):\n",
+    "    structures.append(Structure.from_dict(d[\"structure\"]))\n",
+    "    energies.append(d[\"energy\"])\n",
+    "    forces.append(d[\"forces\"])\n",
+    "    stresses.append(voigt_6_to_full_3x3_stress(np.array(d[\"stress\"])) * -0.1)\n",
+    "stresses = [stress.tolist() for stress in stresses]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6",
+   "metadata": {},
+   "source": [
+    "# Loading the data into the the MGLDataSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,9 +255,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 434712/434712 [03:08<00:00, 2301.06it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# save all PES properties into a dictionary\n",
     "labels = {}\n",
@@ -185,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,13 +298,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "# Model Setup\n",
+    "\n",
+    "Here, we demonstrate the initialization of the TensorNet architecture. You may use any of the other architectures implemented in MatGL."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize TensorNet architecture\n",
     "model = TensorNet(\n",
     "    element_types=element_types,\n",
     "    is_intensive=False,\n",
@@ -223,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,11 +348,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "# Setup the potential lightning module\n",
+    "\n",
+    "Note that the max_epochs is set to 2 here for demonstration purposes. In a real fitting, this number should be much larger (probably > 1000)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'H'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# setup element_refs\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m energies_offsets \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[43m[\u001b[49m\u001b[43misolated_energies_pbe\u001b[49m\u001b[43m[\u001b[49m\u001b[43melement\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43melement\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mDEFAULT_ELEMENTS\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# initialize the potential lightning module\u001b[39;00m\n\u001b[1;32m      4\u001b[0m lit_model \u001b[38;5;241m=\u001b[39m PotentialLightningModule(\n\u001b[1;32m      5\u001b[0m     model\u001b[38;5;241m=\u001b[39mmodel,\n\u001b[1;32m      6\u001b[0m     element_refs\u001b[38;5;241m=\u001b[39menergies_offsets,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     12\u001b[0m     include_line_graph\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m     13\u001b[0m )\n",
+      "Cell \u001b[0;32mIn[18], line 2\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# setup element_refs\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m energies_offsets \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[43misolated_energies_pbe\u001b[49m\u001b[43m[\u001b[49m\u001b[43melement\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m element \u001b[38;5;129;01min\u001b[39;00m DEFAULT_ELEMENTS])\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# initialize the potential lightning module\u001b[39;00m\n\u001b[1;32m      4\u001b[0m lit_model \u001b[38;5;241m=\u001b[39m PotentialLightningModule(\n\u001b[1;32m      5\u001b[0m     model\u001b[38;5;241m=\u001b[39mmodel,\n\u001b[1;32m      6\u001b[0m     element_refs\u001b[38;5;241m=\u001b[39menergies_offsets,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     12\u001b[0m     include_line_graph\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[1;32m     13\u001b[0m )\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'H'"
+     ]
+    }
+   ],
    "source": [
     "# setup element_refs\n",
     "energies_offsets = np.array([isolated_energies_pbe[element] for element in DEFAULT_ELEMENTS])\n",
@@ -278,20 +404,36 @@
     "trainer = pl.Trainer(\n",
     "    logger=logger,\n",
     "    callbacks=[EarlyStopping(monitor=\"val_Total_Loss\", mode=\"min\", patience=200), checkpoint_callback],\n",
-    "    max_epochs=1000,\n",
+    "    max_epochs=2,\n",
     "    accelerator=\"cpu\",  # you can use gpu instead\n",
     "    gradient_clip_val=2.0,\n",
     "    accumulate_grad_batches=4,\n",
     "    profiler=\"simple\",\n",
-    ")\n",
-    "# fit!\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15",
+   "metadata": {},
+   "source": [
+    "# Run the fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trainer.fit(model=lit_model, train_dataloaders=train_loader, val_dataloaders=val_loader)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,9 +443,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18",
+   "metadata": {},
+   "source": [
+    "# Cleanup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
