Update README with MatCalc example.

--- a/notebooks/Using Pre-Trained Models with Matcalc.ipynb
+++ b/notebooks/Using Pre-Trained Models with Matcalc.ipynb
@@ -27,9 +27,9 @@
     "from matgl.ext.ase import PESCalculator\n",
     "from pymatgen.ext.matproj import MPRester\n",
     "\n",
-    "model = matgl.load_model(\"TensorNet-MatPES-PBE-v2025.1-PES\")\n",
-    "ase_calc = PESCalculator(model)\n",
-    "c = ElasticityCalc(ase_calc)"
+    "potential = matgl.load_model(\"TensorNet-MatPES-PBE-v2025.1-PES\")\n",
+    "ase_calc = PESCalculator(potential)\n",
+    "calculator = ElasticityCalc(ase_calc)"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred = c.calc(si)"
+    "pred = calculator.calc(si)"
    ]
   },
   {
