--- a/notebooks/MatCalc-Bench of Pre-Trained Models.ipynb
+++ b/notebooks/MatCalc-Bench of Pre-Trained Models.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "from scipy import constants\n",
     "\n",
-    "eVA3ToGPa = constants.e/(constants.angstrom)**3/constants.giga"
+    "eVA3ToGPa = constants.e / (constants.angstrom) ** 3 / constants.giga"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "\n",
     "    # Initialize the PES calculator with the loaded potential.\n",
     "    # The 'stress_weight' parameter is set using the conversion factor to convert stress to GPa.\n",
-    "    calculator = PESCalculator(potential, stress_weight=1/eVA3ToGPa)\n",
+    "    calculator = PESCalculator(potential, stress_weight=1 / eVA3ToGPa)\n",
     "\n",
     "    # Output the model name for clarity in the benchmarking log.\n",
     "    print(model_name)\n",
@@ -109,7 +109,7 @@
     "\n",
     "    random.seed(2025)\n",
     "    # Randomly sample 1% of the available entries to reduce computational cost.\n",
-    "    sampled_entries = random.sample(entries, len(entries)//100)\n",
+    "    sampled_entries = random.sample(entries, len(entries) // 100)\n",
     "\n",
     "    # Create an instance of the elasticity calculator.\n",
     "    # fmax sets the maximum force tolerance and relax_structure=True enables structure relaxation during calculations.\n",
@@ -129,9 +129,9 @@
     "\n",
     "        # Compute the absolute error for the bulk modulus.\n",
     "        # The calculated value is converted from eV/Å^3 to GPa for direct comparison with the benchmark.\n",
-    "        bulk_modulus_err = abs(entry[\"bulk_modulus_vrh\"]-properties[\"bulk_modulus_vrh\"]*eVA3ToGPa)\n",
+    "        bulk_modulus_err = abs(entry[\"bulk_modulus_vrh\"] - properties[\"bulk_modulus_vrh\"] * eVA3ToGPa)\n",
     "        # Compute the absolute error for the shear modulus similarly.\n",
-    "        shear_modulus_err = abs(entry[\"shear_modulus_vrh\"]-properties[\"shear_modulus_vrh\"]*eVA3ToGPa)\n",
+    "        shear_modulus_err = abs(entry[\"shear_modulus_vrh\"] - properties[\"shear_modulus_vrh\"] * eVA3ToGPa)\n",
     "\n",
     "        # Append the error values for this entry to the lists.\n",
     "        bulk_modulus_ae.append(bulk_modulus_err)\n",
@@ -178,7 +178,7 @@
     "    potential = matgl.load_model(model_name)\n",
     "\n",
     "    # Initialize the PES calculator with the loaded potential.\n",
-    "    calculator = PESCalculator(potential, stress_weight=1/eVA3ToGPa)\n",
+    "    calculator = PESCalculator(potential, stress_weight=1 / eVA3ToGPa)\n",
     "\n",
     "    # Output the model name for clarity in the benchmarking log.\n",
     "    print(model_name)\n",
@@ -190,7 +190,7 @@
     "\n",
     "    random.seed(2025)\n",
     "    # Randomly sample 1% of the available phonon entries.\n",
-    "    sampled_entries = random.sample(entries, len(entries)//100)\n",
+    "    sampled_entries = random.sample(entries, len(entries) // 100)\n",
     "\n",
     "    # Create an instance of the phonon calculator.\n",
     "    # fmax sets the force tolerance, relax_structure=True allows for relaxation, and\n",
@@ -209,7 +209,7 @@
     "        properties = phonon_calc.calc(structure)\n",
     "\n",
     "        # Compute the absolute error for the constant-volume heat capacity at 300 K.\n",
-    "        heat_capacity_err = abs(entry[\"heat_capacity\"]-properties[\"thermal_properties\"][\"heat_capacity\"][30])\n",
+    "        heat_capacity_err = abs(entry[\"heat_capacity\"] - properties[\"thermal_properties\"][\"heat_capacity\"][30])\n",
     "\n",
     "        # Append the error for this entry to the list.\n",
     "        heat_capacity_ae.append(heat_capacity_err)\n",
