--- a/notebooks/MatCalc-Bench of Pre-Trained Models.ipynb
+++ b/notebooks/MatCalc-Bench of Pre-Trained Models.ipynb
@@ -5,7 +5,7 @@
    "id": "08a80218-07c9-476e-9a61-5133413f10d1",
    "metadata": {},
    "source": [
-    "Firstly, we import necessarcy packages, eg. MatCalc, MatGL and Pymatgen."
+    "First, we import necessary packages such as MatCalc, MatGL, and Pymatgen."
    ]
   },
   {
@@ -226,7 +226,7 @@
    "id": "2b84fe8f-513c-4684-9db1-c16c9f05e3f6",
    "metadata": {},
    "source": [
-    "You can certainly perform the full benchmark by slightly modifying the codes provided below, but please be aware that the whole process is considerably time consuming. Therefore, I recommend submitting separate jobs to your cluster for every material—or every few materials, depending on your resource availability and workflow preferences."
+    "You can certainly perform the full benchmark by slightly modifying the codes provided above, but please be aware that the whole process is considerably time consuming. Therefore, I recommend submitting separate jobs to your cluster for every material—or every few materials, depending on your resource availability and workflow preferences."
    ]
   }
  ],
